# pulsecontrol

./: ChangeLog.md  LICENSE  README.md  default.nix  pulseaudio.cabal  pulsecontrol.cabal
app/: Main.hs
src/Control/Monad/: ContErr.hs
src/Sound/Pulse/: Control.hs  Foreign.hsc
src/System/: PulseAudio.hs
src/System/PulseAudio/: Foreign.hsc
test/: Spec.hs
