name:           pulsecontrol
version:        0.1.0.0
synopsis:       Query and control a pulseaudio server
description:    Please see the README on Github at <https://github.com/talanis85/pulsecontrol#readme>
homepage:       https://github.com/talanis85/pulsecontrol#readme
bug-reports:    https://github.com/talanis85/pulsecontrol/issues
author:         Philip Kranz
maintainer:     philip.kranz@googlemail.com
copyright:      2017 Philip Kranz
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/talanis85/pulsecontrol

library
  build-depends:
      base >= 4.7 && < 5
    , mtl
    , time
  build-tools:
      hsc2hs
  exposed-modules:
      Sound.Pulse.Control
  other-modules:
      Control.Monad.ContErr
      Sound.Pulse.Foreign
      Paths_pulsecontrol
  default-language: Haskell2010
  hs-source-dirs:
      src
  extra-libraries:
      pulse

test-suite pulsecontrol-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >= 4.7 && < 5
    , mtl
    , pulsecontrol
  default-language: Haskell2010
